--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "bot-do-muller",
+  "name": "bot-muller-store",
   "version": "1.0.0",
-  "description": "Bot de tickets da Muller Store",
   "main": "index.js",
+  "license": "MIT",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^14.14.1",
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1"
-     "cors": "^2.8.5"
+    "discord.js": "^14.15.3",
+    "dotenv": "^16.3.1",
+    "express": "^4.19.2",
+    "cors": "^2.8.5"
   }
 }
